--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -488,37 +488,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_age'] = pd.cut(base_summer['Age'], bins=intervalles, labels=labels, right=False)\n",
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_age'] = base_summer['Classe_age'].astype('category')\n",
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:16: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_height'] = pd.cut(base_summer['Height'], bins=intervalles_taille, labels=labels_taille, right=False)\n",
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_height'] = base_summer['Classe_height'].astype('category')\n",
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:23: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_weight'] = pd.cut(base_summer['Weight'], bins=intervalles_poids, labels=labels_poids, right=False)\n",
-      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_15904\\1319861514.py:24: SettingWithCopyWarning: \n",
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\1319861514.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1382,6 +1382,424 @@
    "metadata": {},
    "source": [
     "# Faire de nouveaux regroupement et suppression des variables inutisé pour la suite de l'analyse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_ACM = base_summer_2000_net\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\2961306059.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  base_ACM['Sport'].replace({\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Combat', 'Raquette', \"Sur l'eau\", 'Athlétisme', 'Autres sports',\n",
+       "       'Natation', 'Gymnastique', 'Sport collectif'], dtype=object)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_ACM['Sport'].replace({\n",
+    "\n",
+    "'Judo'\t: 'Combat' ,\n",
+    "'Wrestling'\t: 'Combat' ,\n",
+    "'Taekwondo'\t: 'Combat' ,\n",
+    "'Fencing'\t: 'Combat' ,\n",
+    "'Boxing'\t: 'Combat' ,\n",
+    "'Badminton'\t:'Raquette',\n",
+    "'Tennis'\t:'Raquette',\n",
+    "'Table Tennis'\t:'Raquette',\n",
+    "'Swimming'\t: 'Natation',\n",
+    "'Synchronized Swimming'\t: 'Natation',\n",
+    "'Basketball'\t: 'Sport collectif',\n",
+    "'Handball'\t: 'Sport collectif',\n",
+    "'Football'\t: 'Sport collectif',\n",
+    "'Hockey'\t: 'Sport collectif',\n",
+    "'Water Polo'\t: 'Sport collectif',\n",
+    "'Softball'\t: 'Sport collectif',\n",
+    "'Volleyball'\t: 'Sport collectif',\n",
+    "'Baseball'\t: 'Sport collectif',\n",
+    "'Rugby Sevens'\t: 'Sport collectif',\n",
+    "'Beach Volleyball'\t: 'Sport collectif',\n",
+    "'Athletics'\t:'Athlétisme',\n",
+    "'Modern Pentathlon'\t:'Athlétisme',\n",
+    "'Triathlon'\t:'Athlétisme',\n",
+    "'Gymnastics'\t:'Gymnastique',\n",
+    "'Rhythmic Gymnastics'\t:'Gymnastique',\n",
+    "'Trampolining'\t:'Gymnastique',\n",
+    "'Sailing'\t:\"Sur l'eau\",\n",
+    "'Rowing'\t:\"Sur l'eau\",\n",
+    "'Diving'\t:\"Sur l'eau\",\n",
+    "'Canoeing'\t:\"Sur l'eau\",\n",
+    "'Weightlifting'\t:'Autres sports',\n",
+    "'Cycling'\t:'Autres sports',\n",
+    "'Equestrianism'\t:'Autres sports',\n",
+    "'Archery'\t:'Autres sports',\n",
+    "'Shooting'\t:'Autres sports',\n",
+    "'Golf'\t:'Autres sports'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "base_ACM['Sport'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CHN', 'FIN', 'ROU', 'NOR', 'NED', 'FRA', 'EST', 'ESP', 'EGY',\n",
+       "       'ITA', 'AZE', 'RUS', 'ARG', 'CUB', 'BLR', 'GRE', 'CMR', 'MEX',\n",
+       "       'USA', 'NCA', 'ALG', 'BRN', 'IRQ', 'QAT', 'PAK', 'IRI', 'CAN',\n",
+       "       'IRL', 'AUS', 'RSA', 'MAR', 'ERI', 'SUD', 'BEL', 'KAZ', 'BRU',\n",
+       "       'KUW', 'MAS', 'INA', 'UZB', 'UAE', 'KGZ', 'TJK', 'JPN', 'GER',\n",
+       "       'ETH', 'TUR', 'SRI', 'ARM', 'CIV', 'KEN', 'NGR', 'BRA', 'SYR',\n",
+       "       'CHI', 'SUI', 'SWE', 'GUY', 'GEO', 'POR', 'ANG', 'COL', 'DJI',\n",
+       "       'BAN', 'JOR', 'PLE', 'SOM', 'KSA', 'VEN', 'IND', 'GBR', 'GHA',\n",
+       "       'UGA', 'TUN', 'SLO', 'HON', 'TKM', 'MRI', 'POL', 'NIG', 'SKN',\n",
+       "       'NZL', 'LBR', 'SUR', 'NEP', 'LBA', 'MGL', 'PLW', 'LTU', 'NAM',\n",
+       "       'UKR', 'ASA', 'PUR', 'SAM', 'RWA', 'CRO', 'DMA', 'DEN', 'MLT',\n",
+       "       'AUT', 'SEY', 'DOM', 'BIZ', 'PAR', 'URU', 'COM', 'MDV', 'BEN',\n",
+       "       'TTO', 'SGP', 'PER', 'BER', 'SCG', 'HUN', 'CYP', 'YEM', 'LIB',\n",
+       "       'OMA', 'IOA', 'FIJ', 'VAN', 'JAM', 'MDA', 'GUA', 'BUL', 'LAT',\n",
+       "       'SRB', 'IVB', 'VIN', 'ISL', 'CRC', 'ESA', 'CAF', 'MAD', 'CHA',\n",
+       "       'BIH', 'GUM', 'PHI', 'CAY', 'SVK', 'BAR', 'ECU', 'PAN', 'TLS',\n",
+       "       'GAB', 'BAH', 'SMR', 'ISR', 'THA', 'BOT', 'ROT', 'KOR', 'PRK',\n",
+       "       'MOZ', 'CPV', 'CZE', 'LAO', 'LUX', 'AND', 'ZIM', 'GRN', 'HKG',\n",
+       "       'LCA', 'HAI', 'FSM', 'MYA', 'AFG', 'SEN', 'MTN', 'COD', 'GUI',\n",
+       "       'ANT', 'CGO', 'MKD', 'BOL', 'TOG', 'SLE', 'MON', 'GEQ', 'MNE',\n",
+       "       'ISV', 'PNG', 'TAN', 'COK', 'ALB', 'MLI', 'SWZ', 'BDI', 'ARU',\n",
+       "       'STP', 'NRU', 'GBS', 'ZAM', 'TPE', 'CAM', 'MAW', 'BHU', 'VIE',\n",
+       "       'GAM', 'MHL', 'AHO', 'KIR', 'TUV', 'TGA', 'LIE', 'KOS', 'SOL',\n",
+       "       'SSD', 'LES', 'BUR'], dtype=object)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_ACM['NOC'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\147794\\AppData\\Local\\Temp\\ipykernel_4704\\2439894933.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  base_ACM['NOC'].replace({\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Asie', 'Europe', 'Afrique', 'Amérique du Sud', 'Amérique du Nord',\n",
+       "       'Amérique centrale', 'Océanie'], dtype=object)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_ACM['NOC'].replace({\n",
+    "'CHN': 'Asie',\n",
+    "'FIN': 'Europe',\n",
+    "'ROU': 'Europe',\n",
+    "'NOR': 'Europe',\n",
+    "'NED': 'Europe',\n",
+    "'FRA': 'Europe',\n",
+    "'EST': 'Europe',\n",
+    "'ESP': 'Europe',\n",
+    "'EGY': 'Afrique',\n",
+    "'ITA': 'Europe',\n",
+    "'AZE': 'Asie',\n",
+    "'RUS': 'Europe',\n",
+    "'ARG': 'Amérique du Sud',\n",
+    "'CUB': 'Amérique du Nord',\n",
+    "'BLR': 'Europe',\n",
+    "'GRE': 'Europe',\n",
+    "'CMR': 'Afrique',\n",
+    "'MEX': 'Amérique du Nord',\n",
+    "'USA': 'Amérique du Nord',\n",
+    "'NCA': 'Amérique centrale',\n",
+    "'ALG': 'Afrique',\n",
+    "'BRN': 'Asie',\n",
+    "'IRQ': 'Asie',\n",
+    "'QAT': 'Asie',\n",
+    "'PAK': 'Asie',\n",
+    "'IRI': 'Asie',\n",
+    "'CAN': 'Amérique du Nord',\n",
+    "'IRL': 'Europe',\n",
+    "'AUS': 'Océanie',\n",
+    "'RSA': 'Afrique',\n",
+    "'MAR': 'Afrique',\n",
+    "'ERI': 'Afrique',\n",
+    "'SUD': 'Afrique',\n",
+    "'BEL': 'Europe',\n",
+    "'KAZ': 'Asie',\n",
+    "'BRU': 'Asie',\n",
+    "'KUW': 'Asie',\n",
+    "'MAS': 'Asie',\n",
+    "'INA': 'Asie',\n",
+    "'UZB': 'Asie',\n",
+    "'UAE': 'Asie',\n",
+    "'KGZ': 'Asie',\n",
+    "'TJK': 'Asie',\n",
+    "'JPN': 'Asie',\n",
+    "'GER': 'Europe',\n",
+    "'ETH': 'Afrique',\n",
+    "'TUR': 'Asie',\n",
+    "'SRI': 'Asie',\n",
+    "'ARM': 'Asie',\n",
+    "'CIV': 'Afrique',\n",
+    "'KEN': 'Afrique',\n",
+    "'NGR': 'Afrique',\n",
+    "'BRA': 'Amérique du Sud',\n",
+    "'SYR': 'Asie',\n",
+    "'CHI': 'Amérique du Sud',\n",
+    "'SUI': 'Europe',\n",
+    "'SWE': 'Europe',\n",
+    "'GUY': 'Amérique du Sud',\n",
+    "'GEO': 'Asie',\n",
+    "'POR': 'Europe',\n",
+    "'ANG': 'Afrique',\n",
+    "'COL': 'Amérique du Sud',\n",
+    "'DJI': 'Afrique',\n",
+    "'BAN': 'Asie',\n",
+    "'JOR': 'Asie',\n",
+    "'PLE': 'Asie',\n",
+    "'SOM': 'Afrique',\n",
+    "'KSA': 'Asie',\n",
+    "'VEN': 'Amérique du Sud',\n",
+    "'IND': 'Asie',\n",
+    "'GBR': 'Europe',\n",
+    "'GHA': 'Afrique',\n",
+    "'UGA': 'Afrique',\n",
+    "'TUN': 'Afrique',\n",
+    "'SLO': 'Europe',\n",
+    "'HON': 'Amérique centrale',\n",
+    "'TKM': 'Asie',\n",
+    "'MRI': 'Afrique',\n",
+    "'POL': 'Europe',\n",
+    "'NIG': 'Afrique',\n",
+    "'SKN': 'Amérique du Nord',\n",
+    "'NZL': 'Océanie',\n",
+    "'LBR': 'Afrique',\n",
+    "'SUR': 'Amérique du Sud',\n",
+    "'NEP': 'Asie',\n",
+    "'LBA': 'Afrique',\n",
+    "'MGL': 'Asie',\n",
+    "'PLW': 'Océanie',\n",
+    "'LTU': 'Europe',\n",
+    "'NAM': 'Afrique',\n",
+    "'UKR': 'Europe',\n",
+    "'ASA': 'Océanie',\n",
+    "'PUR': 'Amérique du Nord',\n",
+    "'SAM': 'Océanie',\n",
+    "'RWA': 'Afrique',\n",
+    "'CRO': 'Europe',\n",
+    "'DMA': 'Amérique du Nord',\n",
+    "'DEN': 'Europe',\n",
+    "'MLT': 'Europe',\n",
+    "'AUT': 'Europe',\n",
+    "'SEY': 'Afrique',\n",
+    "'DOM': 'Amérique du Nord',\n",
+    "'BIZ': 'Amérique centrale',\n",
+    "'PAR': 'Amérique du Sud',\n",
+    "'URU': 'Amérique du Sud',\n",
+    "'COM': 'Afrique',\n",
+    "'MDV': 'Asie',\n",
+    "'BEN': 'Afrique',\n",
+    "'TTO': 'Amérique du Nord',\n",
+    "'SGP': 'Asie',\n",
+    "'PER': 'Amérique du Sud',\n",
+    "'BER': 'Amérique du Nord',\n",
+    "'SCG': 'Europe',\n",
+    "'HUN': 'Europe',\n",
+    "'CYP': 'Europe',\n",
+    "'YEM': 'Asie',\n",
+    "'LIB': 'Afrique',\n",
+    "'OMA': 'Asie',\n",
+    "'IOA': 'Océanie',\n",
+    "'FIJ': 'Océanie',\n",
+    "'VAN': 'Océanie',\n",
+    "'JAM': 'Amérique du Nord',\n",
+    "'MDA': 'Europe',\n",
+    "'GUA': 'Amérique centrale',\n",
+    "'BUL': 'Europe',\n",
+    "'LAT': 'Europe',\n",
+    "'SRB': 'Europe',\n",
+    "'IVB': 'Amérique du Nord',\n",
+    "'VIN': 'Amérique centrale',\n",
+    "'ISL': 'Europe',\n",
+    "'CRC': 'Amérique centrale',\n",
+    "'ESA': 'Amérique centrale',\n",
+    "'CAF': 'Afrique',\n",
+    "'MAD': 'Afrique',\n",
+    "'CHA': 'Afrique',\n",
+    "'BIH': 'Europe',\n",
+    "'GUM': 'Océanie',\n",
+    "'PHI': 'Asie',\n",
+    "'CAY': 'Amérique du Nord',\n",
+    "'SVK': 'Europe',\n",
+    "'BAR': 'Amérique du Nord',\n",
+    "'ECU': 'Amérique du Sud',\n",
+    "'PAN': 'Amérique centrale',\n",
+    "'TLS': 'Asie',\n",
+    "'GAB': 'Afrique',\n",
+    "'BAH': 'Amérique du Nord',\n",
+    "'SMR': 'Europe',\n",
+    "'ISR': 'Asie',\n",
+    "'THA': 'Asie',\n",
+    "'BOT': 'Afrique',\n",
+    "'ROT': 'Océanie',\n",
+    "'KOR': 'Asie',\n",
+    "'PRK': 'Asie',\n",
+    "'MOZ': 'Afrique',\n",
+    "'CPV': 'Afrique',\n",
+    "'CZE': 'Europe',\n",
+    "'LAO': 'Asie',\n",
+    "'LUX': 'Europe',\n",
+    "'AND': 'Europe',\n",
+    "'ZIM': 'Afrique',\n",
+    "'GRN': 'Amérique du Nord',\n",
+    "'HKG': 'Asie',\n",
+    "'LCA': 'Amérique du Nord',\n",
+    "'HAI': 'Amérique du Nord',\n",
+    "'FSM': 'Océanie',\n",
+    "'MYA': 'Asie',\n",
+    "'AFG': 'Asie',\n",
+    "'SEN': 'Afrique',\n",
+    "'MTN': 'Afrique',\n",
+    "'COD': 'Afrique',\n",
+    "'GUI': 'Afrique',\n",
+    "'ANT': 'Amérique du Nord',\n",
+    "'CGO': 'Afrique',\n",
+    "'MKD': 'Europe',\n",
+    "'BOL': 'Amérique du Sud',\n",
+    "'TOG': 'Afrique',\n",
+    "'SLE': 'Afrique',\n",
+    "'MON': 'Europe',\n",
+    "'GEQ': 'Afrique',\n",
+    "'MNE': 'Europe',\n",
+    "'ISV': 'Amérique du Nord',\n",
+    "'PNG': 'Océanie',\n",
+    "'TAN': 'Afrique',\n",
+    "'COK': 'Océanie',\n",
+    "'ALB': 'Europe',\n",
+    "'MLI': 'Afrique',\n",
+    "'SWZ': 'Afrique',\n",
+    "'BDI': 'Afrique',\n",
+    "'ARU': 'Amérique du Sud',\n",
+    "'STP': 'Afrique',\n",
+    "'NRU': 'Océanie',\n",
+    "'GBS': 'Afrique',\n",
+    "'ZAM': 'Afrique',\n",
+    "'TPE': 'Asie',\n",
+    "'CAM': 'Amérique centrale',\n",
+    "'MAW': 'Afrique',\n",
+    "'BHU': 'Asie',\n",
+    "'VIE': 'Asie',\n",
+    "'GAM': 'Afrique',\n",
+    "'MHL': 'Océanie',\n",
+    "'AHO': 'Océanie',\n",
+    "'KIR': 'Océanie',\n",
+    "'TUV': 'Océanie',\n",
+    "'TGA': 'Océanie',\n",
+    "'LIE': 'Europe',\n",
+    "'KOS': 'Europe',\n",
+    "'SOL': 'Océanie',\n",
+    "'SSD': 'Afrique',\n",
+    "'LES': 'Afrique',\n",
+    "'BUR': 'Afrique',\n",
+    "}, inplace=True)\n",
+    "\n",
+    "base_ACM['NOC'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ID', 'Name', 'Sex', 'NOC', 'Games', 'Year', 'City', 'Sport', 'Event',\n",
+      "       'Medal', 'Classe_age', 'Classe_height', 'Classe_weight'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_ACM.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Sex', 'NOC', 'Games', 'Sport', 'Medal', 'Classe_age', 'Classe_height',\n",
+      "       'Classe_weight'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# suppresion des variables inutile pour la suite de l'analyse\n",
+    "\n",
+    "base_ACM = base_ACM.drop(['ID', 'Name','Year','City','Event'], axis=1)\n",
+    "print(base_ACM.columns)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ACM "
    ]
   }
  ],
