Interprétation modèle régression logistique

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -25,7 +25,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import scipy"
    ]
   },
   {
@@ -495,37 +496,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_age'] = pd.cut(base_summer['Age'], bins=intervalles, labels=labels, right=False)\n",
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:9: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_age'] = base_summer['Classe_age'].astype('category')\n",
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:16: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_height'] = pd.cut(base_summer['Height'], bins=intervalles_taille, labels=labels_taille, right=False)\n",
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:17: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_height'] = base_summer['Classe_height'].astype('category')\n",
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:23: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  base_summer['Classe_weight'] = pd.cut(base_summer['Weight'], bins=intervalles_poids, labels=labels_poids, right=False)\n",
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/1319861514.py:24: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/1319861514.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1126,7 +1127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/2961306059.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/2961306059.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1241,7 +1242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_1901/2439894933.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/3s/l4h6q8sj0119129l15lyy7l40000gn/T/ipykernel_2522/2439894933.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2102,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2121,7 @@
        "array(['Pas_de_médaille', 'Bronze', 'Silver', 'Gold'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2140,7 +2141,7 @@
        "array(['Pas_de_médaille', 'medaille'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2186,7 @@
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('cat',OneHotEncoder(), cat_columns)\n",
+    "        ('cat',OneHotEncoder(drop='first'), cat_columns)\n",
     "    ],\n",
     "    remainder='drop'\n",
     ")\n",
@@ -2203,15 +2204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training score 0.8502069224981189\n",
-      "Test score 0.8504138449962377\n"
+      "Training score 0.8502257336343115\n",
+      "Test score 0.8503386004514673\n"
      ]
     }
    ],
@@ -2224,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2233,11 +2234,11 @@
      "text": [
       "Matrice de confusion (Training Data):\n",
       "[[45187     7]\n",
-      " [ 7956    10]]\n",
+      " [ 7955    11]]\n",
       "\n",
       "Matrice de confusion (Test Data):\n",
       "[[11299     0]\n",
-      " [ 1988     3]]\n"
+      " [ 1989     2]]\n"
      ]
     }
    ],
@@ -2259,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2270,7 @@
       "Sensibilité: 100.0\n",
       "Spécificité: 0.0\n",
       "Taux d'erreur alpha: 0.0\n",
-      "Taux d'erreur beta: 99.84932194876947\n",
+      "Taux d'erreur beta: 99.89954796584631\n",
       "Taux d'erreur moyen: 15.0\n"
      ]
     }
@@ -2540,6 +2541,165 @@
     "print(\"Taux d'erreur alpha:\", taux_erreur_alpha_knn)\n",
     "print(\"Taux d'erreur beta:\", taux_erreur_beta_knn)\n",
     "print(\"Taux d'erreur moyen:\", taux_erreur_moyen_knn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# interprétation du modèle Regression logisitique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.3978035 , -1.40336925,  1.59592134,  0.66223484,  0.90437167,\n",
+       "         0.99840342,  1.08234944,  0.51151683,  1.02918605,  0.32729345,\n",
+       "         0.52719951,  0.1744292 ,  1.37127623,  0.99798343,  0.05140214,\n",
+       "        -0.30042246, -0.08521122,  0.14974159, -0.08602716,  0.25022517,\n",
+       "         0.106007  ,  0.0227448 ,  0.18795768]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coefficients = LG.coef_\n",
+    "coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex_M: -0.39780349518027064\n",
+      "NOC_Amérique centrale: -1.4033692529791826\n",
+      "NOC_Amérique du Nord: 1.5959213429365555\n",
+      "NOC_Amérique du Sud: 0.6622348353585583\n",
+      "NOC_Asie: 0.9043716652915043\n",
+      "NOC_Europe: 0.9984034191862604\n",
+      "NOC_Océanie: 1.0823494449459006\n",
+      "Sport_Autres sports: 0.5115168345903255\n",
+      "Sport_Combat: 1.0291860475194856\n",
+      "Sport_Gymnastique: 0.32729344961569073\n",
+      "Sport_Natation: 0.527199506296186\n",
+      "Sport_Raquette: 0.174429195474244\n",
+      "Sport_Sport collectif: 1.371276229886181\n",
+      "Sport_Sur l'eau: 0.9979834266040954\n",
+      "Classe_age_25-32 ans: 0.05140214058448912\n",
+      "Classe_age_< 21 ans: -0.30042245667455447\n",
+      "Classe_age_> 32 ans: -0.08521122240318722\n",
+      "Classe_height_173 - 185 cm: 0.1497415908279271\n",
+      "Classe_height_< 165 cm: -0.08602716134083992\n",
+      "Classe_height_> 185 cm: 0.2502251747211351\n",
+      "Classe_weight_74 - 80 kg: 0.10600699615996229\n",
+      "Classe_weight_< 65 kg: 0.02274479765000531\n",
+      "Classe_weight_> 80 kg: 0.18795767668687663\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtenir les noms des colonnes après la transformation\n",
+    "column_names = preprocessor.named_transformers_['cat'].get_feature_names_out(cat_columns)\n",
+    "\n",
+    "# Associer les coefficients aux noms des colonnes\n",
+    "coefficients_dict = dict(zip(column_names, LG.coef_[0]))\n",
+    "\n",
+    "# Afficher les coefficients avec les noms des colonnes associés\n",
+    "for variable, coef in coefficients_dict.items():\n",
+    "    print(f\"{variable}: {coef}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.4082892])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intercept = LG.intercept_\n",
+    "intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex_M: <0.001\n",
+      "NOC_Amérique centrale: <0.001\n",
+      "NOC_Amérique du Nord: <0.001\n",
+      "NOC_Amérique du Sud: <0.001\n",
+      "NOC_Asie: <0.001\n",
+      "NOC_Europe: <0.001\n",
+      "NOC_Océanie: <0.001\n",
+      "Sport_Autres sports: <0.001\n",
+      "Sport_Combat: <0.001\n",
+      "Sport_Gymnastique: <0.001\n",
+      "Sport_Natation: <0.001\n",
+      "Sport_Raquette: 0.017\n",
+      "Sport_Sport collectif: <0.001\n",
+      "Sport_Sur l'eau: <0.001\n",
+      "Classe_age_25-32 ans: 0.267\n",
+      "Classe_age_< 21 ans: <0.001\n",
+      "Classe_age_> 32 ans: 0.151\n",
+      "Classe_height_173 - 185 cm: 0.035\n",
+      "Classe_height_< 165 cm: 0.149\n",
+      "Classe_height_> 185 cm: 0.001\n",
+      "Classe_weight_74 - 80 kg: 0.100\n",
+      "Classe_weight_< 65 kg: 0.392\n",
+      "Classe_weight_> 80 kg: 0.011\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtenez les probabilités prédites\n",
+    "predicted_probabilities = LG.predict_proba(X_train_encoded)\n",
+    "\n",
+    "# Calculez les z-scores des coefficients\n",
+    "z_scores = np.zeros(shape=(len(LG.coef_[0]),))\n",
+    "for index, coef in enumerate(LG.coef_[0]):\n",
+    "    z_scores[index] = coef / np.std(predicted_probabilities[:, 1])\n",
+    "\n",
+    "# Convertissez les z-scores en p-values approximatives\n",
+    "p_values = scipy.stats.norm.sf(abs(z_scores))\n",
+    "p_values\n",
+    "\n",
+    "# Créez un dictionnaire pour associer les noms de colonnes après la transformation aux p-values\n",
+    "p_values_dict = dict(zip(column_names, p_values))\n",
+    "\n",
+    "# Affichez les associations entre les modalités et les p-values\n",
+    "for column_name, p_value in p_values_dict.items():\n",
+    "    if p_value < 0.001:\n",
+    "        print(f\"{column_name}: <0.001\")\n",
+    "    else:\n",
+    "        print(f\"{column_name}: {p_value:.3f}\")\n"
    ]
   }
  ],
