rajout de commentaire dans le code

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -18,6 +18,7 @@
     "from matplotlib.ticker import FuncFormatter\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from fanalysis.mca import MCA\n",
     "from scipy.stats import chi2_contingency\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -1593,7 +1594,7 @@
    ],
    "source": [
     "# pip install fanalysis\n",
-    "from fanalysis.mca import MCA\n",
+    "# utilisation du package fanalysis \n",
     "\n",
     "acm = MCA()\n",
     "acm.fit(base_ACM.values)"
@@ -1636,6 +1637,7 @@
     }
    ],
    "source": [
+    "# afficher les valeurs propres \n",
     "acm.eig_"
    ]
   },
@@ -1737,6 +1739,7 @@
     }
    ],
    "source": [
+    "# indormation que procure l'ACM \n",
     "info_col = acm.col_topandas()\n",
     "info_col.columns"
    ]
@@ -1788,6 +1791,7 @@
     }
    ],
    "source": [
+    "# Coordonnée des modalité pour l'axe 1 et 2\n",
     "coord_col = info_col[['col_coord_dim1', 'col_coord_dim2']]\n",
     "print(coord_col)"
    ]
@@ -2035,6 +2039,7 @@
     }
    ],
    "source": [
+    "# Contribution des modalités pour l'axe 1 et 2\n",
     "contrib_col = pd.DataFrame(info_col[['col_contrib_dim1', 'col_contrib_dim2']])\n",
     "contrib_col"
    ]
@@ -2107,6 +2112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# copie de la base pour les modèles \n",
     "base_model = base_ACM"
    ]
   },
@@ -2147,6 +2153,7 @@
     }
    ],
    "source": [
+    "# Regroupement des 3 médailles en une modalité médaille\n",
     "base_model['Medal'].replace({\n",
     "    'Gold': 'medaille',\n",
     "    'Silver': 'medaille',\n",
@@ -2163,6 +2170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# y variable expliqué et X les variables explicatives \n",
     "y = base_model.Medal\n",
     "X = base_model.drop('Medal',axis = 1)"
    ]
@@ -2182,6 +2190,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cette étape permet de ne pas créer des dummy pour réaliser les modèles \n",
+    "\n",
     "cat_columns = ['Sex', 'NOC', 'Sport','Classe_age', 'Classe_height','Classe_weight']\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
@@ -2276,6 +2286,8 @@
     }
    ],
    "source": [
+    "# calcul des indicateurs de performance du modèle : \n",
+    "\n",
     "TP = conf_matrix_test[0, 0]\n",
     "FP = conf_matrix_test[1, 0]\n",
     "FN = conf_matrix_test[0, 1]\n",
@@ -2379,6 +2391,8 @@
     }
    ],
    "source": [
+    "# calcul des indicateurs de performance du modèle : \n",
+    "\n",
     "TP_RF = conf_matrix_test_RF[0, 0]\n",
     "FP_RF = conf_matrix_test_RF[1, 0]\n",
     "FN_RF = conf_matrix_test_RF[0, 1]\n",
@@ -2525,6 +2539,8 @@
     }
    ],
    "source": [
+    "# calcul des indicateurs de performance du modèle : \n",
+    "\n",
     "TP_knn = conf_matrix_test_knn[0, 0]\n",
     "FP_knn = conf_matrix_test_knn[1, 0]\n",
     "FN_knn = conf_matrix_test_knn[0, 1]\n",
@@ -2571,6 +2587,8 @@
     }
    ],
    "source": [
+    "# permet d'obtenir les coefficients directeurs associé aux modalités\n",
+    "\n",
     "coefficients = LG.coef_\n",
     "coefficients"
    ]
@@ -2639,6 +2657,8 @@
     }
    ],
    "source": [
+    "# permet d'obtenir le coefficient de l'individu de référence\n",
+    "\n",
     "intercept = LG.intercept_\n",
     "intercept"
    ]
