fonction faite jusqu'à la modelisation

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -1010,9 +1010,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "analyze_acm(base_ACM)\n",
     "#remplacer les valeurs manquantes de la variable cibe par \"pas de médaille\"\n",
-    "base_ACM['Medal'].fillna('Pas_de_médaille', inplace=True)\n",
-    "print(base_ACM)\n"
+    "#base_ACM['Medal'].fillna('Pas_de_médaille', inplace=True)\n",
+    "#print(base_ACM)\n"
    ]
   },
   {
@@ -1024,8 +1025,8 @@
     "# pip install fanalysis\n",
     "# utilisation du package fanalysis \n",
     "\n",
-    "acm = MCA()\n",
-    "acm.fit(base_ACM.values)"
+    "#acm = MCA()\n",
+    "#acm.fit(base_ACM.values)"
    ]
   },
   {
@@ -1035,7 +1036,7 @@
    "outputs": [],
    "source": [
     "# afficher les valeurs propres \n",
-    "acm.eig_"
+    "#acm.eig_"
    ]
   },
   {
@@ -1044,7 +1045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eigenvalues = acm.eig_"
+    "#eigenvalues = acm.eig_"
    ]
   },
   {
@@ -1054,34 +1055,34 @@
    "outputs": [],
    "source": [
     "# Obtenir les valeurs propres associées à chaque composante principale\n",
-    "eigenvalues = acm.eig_\n",
+    "#eigenvalues = acm.eig_\n",
     "\n",
     "# Calculer le pourcentage de chaque valeur propre\n",
-    "total_variance = sum(eigenvalues[0])\n",
-    "percentage_var = [(value / total_variance) * 100 for value in eigenvalues[0]]\n",
+    "#total_variance = sum(eigenvalues[0])\n",
+    "#percentage_var = [(value / total_variance) * 100 for value in eigenvalues[0]]\n",
     "\n",
     "# Utiliser une palette de couleurs Seaborn et inverser l'ordre\n",
-    "sns.set(style=\"whitegrid\")\n",
-    "palette = sns.color_palette(\"BuGn\", len(percentage_var))\n",
-    "palette = palette[::-1]  # Inverser l'ordre des couleurs\n",
+    "#sns.set(style=\"whitegrid\")\n",
+    "#palette = sns.color_palette(\"BuGn\", len(percentage_var))\n",
+    "#palette = palette[::-1]  # Inverser l'ordre des couleurs\n",
     "\n",
     "# Tracer le diagramme en barres des valeurs propres en pourcentage\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "bars = plt.bar(range(1, len(percentage_var) + 1), percentage_var, color=palette, edgecolor='black')\n",
-    "plt.xlabel('Composante Principale')\n",
-    "plt.ylabel('Pourcentage de Variance Expliquée')\n",
-    "plt.title('Diagramme en Barres des Valeurs Propres en Pourcentage - ACM')\n",
+    "#plt.figure(figsize=(10, 6))\n",
+    "#bars = plt.bar(range(1, len(percentage_var) + 1), percentage_var, color=palette, edgecolor='black')\n",
+    "#plt.xlabel('Composante Principale')\n",
+    "#plt.ylabel('Pourcentage de Variance Expliquée')\n",
+    "#plt.title('Diagramme en Barres des Valeurs Propres en Pourcentage - ACM')\n",
     "\n",
     "# Définir les ticks de l'axe x avec des valeurs entières\n",
-    "plt.xticks(range(1, len(percentage_var) + 1))\n",
+    "#plt.xticks(range(1, len(percentage_var) + 1))\n",
     "\n",
     "# Ajouter les étiquettes de valeur uniquement pour les deux premières barres\n",
-    "for i, (bar, value) in enumerate(zip(bars, percentage_var)):\n",
-    "    if i < 2:\n",
-    "        plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.2, f'{value:.2f}%',\n",
-    "                 ha='center', va='bottom', color='black', fontsize = 8)\n",
+    "#for i, (bar, value) in enumerate(zip(bars, percentage_var)):\n",
+    "#    if i < 2:\n",
+    "#        plt.text(bar.get_x() + bar.get_width() / 2, bar.get_height() + 0.2, f'{value:.2f}%',\n",
+    "#                 ha='center', va='bottom', color='black', fontsize = 8)\n",
     "\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1091,8 +1092,8 @@
    "outputs": [],
    "source": [
     "# indormation que procure l'ACM \n",
-    "info_col = acm.col_topandas()\n",
-    "info_col.columns"
+    "#info_col = acm.col_topandas()\n",
+    "#info_col.columns"
    ]
   },
   {
@@ -1102,8 +1103,8 @@
    "outputs": [],
    "source": [
     "# Coordonnée des modalité pour l'axe 1 et 2\n",
-    "coord_col = info_col[['col_coord_dim1', 'col_coord_dim2']]\n",
-    "print(coord_col)"
+    "#coord_col = info_col[['col_coord_dim1', 'col_coord_dim2']]\n",
+    "#print(coord_col)"
    ]
   },
   {
@@ -1113,8 +1114,8 @@
    "outputs": [],
    "source": [
     "# Contribution des modalités pour l'axe 1 et 2\n",
-    "contrib_col = pd.DataFrame(info_col[['col_contrib_dim1', 'col_contrib_dim2']])\n",
-    "contrib_col"
+    "#contrib_col = pd.DataFrame(info_col[['col_contrib_dim1', 'col_contrib_dim2']])\n",
+    "#contrib_col"
    ]
   },
   {
@@ -1124,20 +1125,20 @@
    "outputs": [],
    "source": [
     "#ACM -projection des colonnes\n",
-    "import matplotlib.pyplot as plt\n",
+    "#import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(7, 7))\n",
-    "ax.axis([-2.2, +2.2, -1.2, +1.5])\n",
-    "ax.plot([-2.2, +2.2], [0, 0], color=\"silver\", linestyle=\"--\")\n",
-    "ax.plot([0, 0], [-2.2, +2.2], color='silver', linestyle=\"--\")\n",
-    "ax.set_xlabel('Dim.1')\n",
-    "ax.set_ylabel('Dim.2')\n",
-    "plt.title(\"Modalité\")\n",
+    "#fig, ax = plt.subplots(figsize=(7, 7))\n",
+    "#ax.axis([-2.2, +2.2, -1.2, +1.5])\n",
+    "#ax.plot([-2.2, +2.2], [0, 0], color=\"silver\", linestyle=\"--\")\n",
+    "#ax.plot([0, 0], [-2.2, +2.2], color='silver', linestyle=\"--\")\n",
+    "#ax.set_xlabel('Dim.1')\n",
+    "#ax.set_ylabel('Dim.2')\n",
+    "#plt.title(\"Modalité\")\n",
     "\n",
-    "for x, y, lbl in zip(coord_col.iloc[:, 0], coord_col.iloc[:, 1], coord_col.index):\n",
-    "    ax.text(x, y, lbl, horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
+    "#for x, y, lbl in zip(coord_col.iloc[:, 0], coord_col.iloc[:, 1], coord_col.index):\n",
+    "#    ax.text(x, y, lbl, horizontalalignment='center', verticalalignment='center', fontsize=7)\n",
     "\n",
-    "plt.show()\n"
+    "#plt.show()\n"
    ]
   },
   {
@@ -1147,7 +1148,7 @@
    "outputs": [],
    "source": [
     "#ACM -projection en couleur\n",
-    "acm.mapping_col(num_x_axis = 1 , num_y_axis = 2)"
+    "#acm.mapping_col(num_x_axis = 1 , num_y_axis = 2)"
    ]
   },
   {
