fonction faite sur les 3 modèles

--- a/MLOPS_Louise_Cyrielle.ipynb
+++ b/MLOPS_Louise_Cyrielle.ipynb
@@ -1165,7 +1165,8 @@
    "outputs": [],
    "source": [
     "# copie de la base pour les modèles \n",
-    "base_model = base_ACM"
+    "base_model = base_ACM\n",
+    "X_train_encoded, X_test_encoded, y_train, y_test = preprocess_and_split_data(base_model)"
    ]
   },
   {
@@ -1174,7 +1175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model['Medal'].unique()"
+    "#base_model['Medal'].unique()"
    ]
   },
   {
@@ -1184,14 +1185,14 @@
    "outputs": [],
    "source": [
     "# Regroupement des 3 médailles en une modalité médaille\n",
-    "base_model['Medal'].replace({\n",
-    "    'Gold': 'medaille',\n",
-    "    'Silver': 'medaille',\n",
-    "    'Bronze': 'medaille',\n",
-    "}, inplace=True)\n",
+    "#base_model['Medal'].replace({\n",
+    "#    'Gold': 'medaille',\n",
+    "#    'Silver': 'medaille',\n",
+    "#    'Bronze': 'medaille',\n",
+    "#}, inplace=True)\n",
     "\n",
     "# Affichage des valeurs uniques après la modification\n",
-    "base_model['Medal'].unique()"
+    "#base_model['Medal'].unique()"
    ]
   },
   {
@@ -1201,8 +1202,8 @@
    "outputs": [],
    "source": [
     "# y variable expliqué et X les variables explicatives \n",
-    "y = base_model.Medal\n",
-    "X = base_model.drop('Medal',axis = 1)"
+    "#y = base_model.Medal\n",
+    "#X = base_model.drop('Medal',axis = 1)"
    ]
   },
   {
@@ -1211,7 +1212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,stratify=y)"
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,stratify=y)"
    ]
   },
   {
@@ -1222,17 +1223,17 @@
    "source": [
     "# cette étape permet de ne pas créer des dummy pour réaliser les modèles \n",
     "\n",
-    "cat_columns = ['Sex', 'NOC', 'Sport','Classe_age', 'Classe_height','Classe_weight']\n",
+    "#cat_columns = ['Sex', 'NOC', 'Sport','Classe_age', 'Classe_height','Classe_weight']\n",
     "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        ('cat',OneHotEncoder(drop='first'), cat_columns)\n",
-    "    ],\n",
-    "    remainder='drop'\n",
-    ")\n",
+    "#preprocessor = ColumnTransformer(\n",
+    "#    transformers=[\n",
+    "#        ('cat',OneHotEncoder(drop='first'), cat_columns)\n",
+    "#   ],\n",
+    "#  remainder='drop'\n",
+    "#)\n",
     "\n",
-    "X_train_encoded = preprocessor.fit_transform(X_train)\n",
-    "X_test_encoded = preprocessor.fit_transform(X_test)"
+    "#X_train_encoded = preprocessor.fit_transform(X_train)\n",
+    "#X_test_encoded = preprocessor.fit_transform(X_test)"
    ]
   },
   {
@@ -1248,10 +1249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LG = LogisticRegression(random_state = 0, max_iter = 10000)\n",
-    "LG.fit(X_train_encoded, y_train)\n",
-    "print(\"Training score\", LG.score(X_train_encoded, y_train))\n",
-    "print(\"Test score\", LG.score(X_test_encoded, y_test))"
+    "trained_model_LG = train_and_evaluate_logistic_regression(X_train_encoded, X_test_encoded, y_train, y_test)\n",
+    "#LG = LogisticRegression(random_state = 0, max_iter = 10000)\n",
+    "#LG.fit(X_train_encoded, y_train)\n",
+    "#print(\"Training score\", LG.score(X_train_encoded, y_train))\n",
+    "#print(\"Test score\", LG.score(X_test_encoded, y_test))"
    ]
   },
   {
@@ -1261,18 +1263,18 @@
    "outputs": [],
    "source": [
     "# Prédiction sur les données d'entraînement et de test\n",
-    "y_train_pred = LG.predict(X_train_encoded)\n",
-    "y_test_pred = LG.predict(X_test_encoded)\n",
+    "#y_train_pred = LG.predict(X_train_encoded)\n",
+    "#y_test_pred = LG.predict(X_test_encoded)\n",
     "\n",
     "# Matrice de confusion pour les données d'entraînement\n",
-    "conf_matrix_train = confusion_matrix(y_train, y_train_pred)\n",
-    "print(\"Matrice de confusion (Training Data):\")\n",
-    "print(conf_matrix_train)\n",
+    "#conf_matrix_train = confusion_matrix(y_train, y_train_pred)\n",
+    "#print(\"Matrice de confusion (Training Data):\")\n",
+    "#print(conf_matrix_train)\n",
     "\n",
     "# Matrice de confusion pour les données de test\n",
-    "conf_matrix_test = confusion_matrix(y_test, y_test_pred)\n",
-    "print(\"\\nMatrice de confusion (Test Data):\")\n",
-    "print(conf_matrix_test)"
+    "#conf_matrix_test = confusion_matrix(y_test, y_test_pred)\n",
+    "#print(\"\\nMatrice de confusion (Test Data):\")\n",
+    "#print(conf_matrix_test)"
    ]
   },
   {
@@ -1283,22 +1285,22 @@
    "source": [
     "# calcul des indicateurs de performance du modèle : \n",
     "\n",
-    "TP = conf_matrix_test[0, 0]\n",
-    "FP = conf_matrix_test[1, 0]\n",
-    "FN = conf_matrix_test[0, 1]\n",
-    "TN = conf_matrix_test[1, 1]\n",
+    "#TP = conf_matrix_test[0, 0]\n",
+    "#FP = conf_matrix_test[1, 0]\n",
+    "#FN = conf_matrix_test[0, 1]\n",
+    "#TN = conf_matrix_test[1, 1]\n",
     "\n",
-    "sensibilite = round((TP / (TP + FN)),2)*100\n",
-    "specificite = round((TN / (TN + FP)),2)*100\n",
-    "taux_erreur_alpha = round((FN / (TP + FN)),2)*100\n",
-    "taux_erreur_beta = (FP / (FP + TN))*100\n",
-    "taux_erreur_moyen = round(((FP + FN) / (FP + FN + TP + TN)),2)*100\n",
+    "#sensibilite = round((TP / (TP + FN)),2)*100\n",
+    "#specificite = round((TN / (TN + FP)),2)*100\n",
+    "#taux_erreur_alpha = round((FN / (TP + FN)),2)*100\n",
+    "#taux_erreur_beta = (FP / (FP + TN))*100\n",
+    "#taux_erreur_moyen = round(((FP + FN) / (FP + FN + TP + TN)),2)*100\n",
     "\n",
-    "print(\"Sensibilité:\", sensibilite)\n",
-    "print(\"Spécificité:\", specificite)\n",
-    "print(\"Taux d'erreur alpha:\", taux_erreur_alpha)\n",
-    "print(\"Taux d'erreur beta:\", taux_erreur_beta)\n",
-    "print(\"Taux d'erreur moyen:\", taux_erreur_moyen) "
+    "#print(\"Sensibilité:\", sensibilite)\n",
+    "#print(\"Spécificité:\", specificite)\n",
+    "#print(\"Taux d'erreur alpha:\", taux_erreur_alpha)\n",
+    "#print(\"Taux d'erreur beta:\", taux_erreur_beta)\n",
+    "#print(\"Taux d'erreur moyen:\", taux_erreur_moyen) "
    ]
   },
   {
@@ -1314,14 +1316,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trained_model_RF = train_and_evaluate_random_forest(X_train_encoded, X_test_encoded, y_train, y_test)\n",
+    "\n",
     "# Créer une instance du modèle Random Forest\n",
-    "RF = RandomForestClassifier(random_state=0, n_estimators=100)\n",
+    "#RF = RandomForestClassifier(random_state=0, n_estimators=100)\n",
     "\n",
     "# Entraîner le modèle sur les données d'entraînement encodées\n",
-    "RF.fit(X_train_encoded, y_train)\n",
+    "#RF.fit(X_train_encoded, y_train)\n",
     "\n",
-    "print(\"Training score\", RF.score(X_train_encoded, y_train))\n",
-    "print(\"Test score\", RF.score(X_test_encoded, y_test))"
+    "#print(\"Training score\", RF.score(X_train_encoded, y_train))\n",
+    "#print(\"Test score\", RF.score(X_test_encoded, y_test))"
    ]
   },
   {
@@ -1331,18 +1335,18 @@
    "outputs": [],
    "source": [
     "# Prédiction sur les données d'entraînement et de test\n",
-    "y_train_pred_RF = RF.predict(X_train_encoded)\n",
-    "y_test_pred_RF = RF.predict(X_test_encoded)\n",
+    "#y_train_pred_RF = RF.predict(X_train_encoded)\n",
+    "#y_test_pred_RF = RF.predict(X_test_encoded)\n",
     "\n",
     "# Matrice de confusion pour les données d'entraînement\n",
-    "conf_matrix_train_RF = confusion_matrix(y_train, y_train_pred_RF)\n",
-    "print(\"Matrice de confusion (Training Data):\")\n",
-    "print(conf_matrix_train_RF)\n",
+    "#conf_matrix_train_RF = confusion_matrix(y_train, y_train_pred_RF)\n",
+    "#print(\"Matrice de confusion (Training Data):\")\n",
+    "#print(conf_matrix_train_RF)\n",
     "\n",
     "# Matrice de confusion pour les données de test\n",
-    "conf_matrix_test_RF = confusion_matrix(y_test, y_test_pred_RF)\n",
-    "print(\"\\nMatrice de confusion (Test Data):\")\n",
-    "print(conf_matrix_test_RF)"
+    "#conf_matrix_test_RF = confusion_matrix(y_test, y_test_pred_RF)\n",
+    "#print(\"\\nMatrice de confusion (Test Data):\")\n",
+    "#print(conf_matrix_test_RF)"
    ]
   },
   {
@@ -1353,22 +1357,22 @@
    "source": [
     "# calcul des indicateurs de performance du modèle : \n",
     "\n",
-    "TP_RF = conf_matrix_test_RF[0, 0]\n",
-    "FP_RF = conf_matrix_test_RF[1, 0]\n",
-    "FN_RF = conf_matrix_test_RF[0, 1]\n",
-    "TN_RF = conf_matrix_test_RF[1, 1]\n",
+    "#TP_RF = conf_matrix_test_RF[0, 0]\n",
+    "#FP_RF = conf_matrix_test_RF[1, 0]\n",
+    "#FN_RF = conf_matrix_test_RF[0, 1]\n",
+    "#TN_RF = conf_matrix_test_RF[1, 1]\n",
     "\n",
-    "sensibilite_RF = round((TP_RF / (TP_RF + FN_RF)),2)*100\n",
-    "specificite_RF = round((TN_RF / (TN_RF + FP_RF)),2)*100\n",
-    "taux_erreur_alpha_RF = round((FN_RF / (TP_RF + FN_RF)),2)*100\n",
-    "taux_erreur_beta_RF = (FP_RF / (FP_RF + TN_RF))*100\n",
-    "taux_erreur_moyen_RF = round(((FP_RF + FN_RF) / (FP_RF + FN_RF + TP_RF + TN_RF)),2)*100\n",
+    "#sensibilite_RF = round((TP_RF / (TP_RF + FN_RF)),2)*100\n",
+    "#specificite_RF = round((TN_RF / (TN_RF + FP_RF)),2)*100\n",
+    "#taux_erreur_alpha_RF = round((FN_RF / (TP_RF + FN_RF)),2)*100\n",
+    "#taux_erreur_beta_RF = (FP_RF / (FP_RF + TN_RF))*100\n",
+    "#taux_erreur_moyen_RF = round(((FP_RF + FN_RF) / (FP_RF + FN_RF + TP_RF + TN_RF)),2)*100\n",
     "\n",
-    "print(\"Sensibilité:\", sensibilite_RF)\n",
-    "print(\"Spécificité:\", specificite_RF)\n",
-    "print(\"Taux d'erreur alpha:\", taux_erreur_alpha_RF)\n",
-    "print(\"Taux d'erreur beta:\", taux_erreur_beta_RF)\n",
-    "print(\"Taux d'erreur moyen:\", taux_erreur_moyen_RF)"
+    "#print(\"Sensibilité:\", sensibilite_RF)\n",
+    "#print(\"Spécificité:\", specificite_RF)\n",
+    "#print(\"Taux d'erreur alpha:\", taux_erreur_alpha_RF)\n",
+    "#print(\"Taux d'erreur beta:\", taux_erreur_beta_RF)\n",
+    "#print(\"Taux d'erreur moyen:\", taux_erreur_moyen_RF)"
    ]
   },
   {
@@ -1384,24 +1388,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trained_model_KNN = choose_k_and_evaluate_knn(X_train_encoded, X_test_encoded, y_train, y_test)\n",
+    "\n",
     "#Choix du k optimal\n",
-    "error_rate = []\n",
-    "k_values = list(filter(lambda x: x % 2 == 1, range(0, 50)))\n",
-    "best_k = 0\n",
-    "for i in k_values:\n",
-    "    knn = KNeighborsClassifier(n_neighbors=i)\n",
-    "    knn.fit(X_train_encoded, y_train)\n",
-    "    pred_i = knn.predict(X_test_encoded)\n",
-    "    error_rate.append(np.mean(pred_i != y_test))\n",
-    "print(error_rate.index(np.min(error_rate)))\n",
+    "#error_rate = []\n",
+    "#k_values = list(filter(lambda x: x % 2 == 1, range(0, 50)))\n",
+    "#best_k = 0\n",
+    "#for i in k_values:\n",
+    "#    knn = KNeighborsClassifier(n_neighbors=i)\n",
+    "#    knn.fit(X_train_encoded, y_train)\n",
+    "#    pred_i = knn.predict(X_test_encoded)\n",
+    "#    error_rate.append(np.mean(pred_i != y_test))\n",
+    "#print(error_rate.index(np.min(error_rate)))\n",
     "\n",
     "#figure qui montre le k otpimal\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.plot(k_values,error_rate,color='blue', linestyle='dashed', marker='o',\n",
-    "         markerfacecolor='red', markersize=10)\n",
-    "plt.title('Error Rate vs. K Value')\n",
-    "plt.xlabel('K')\n",
-    "plt.ylabel('Error Rate')"
+    "#plt.figure(figsize=(10,10))\n",
+    "#plt.plot(k_values,error_rate,color='blue', linestyle='dashed', marker='o',\n",
+    "#         markerfacecolor='red', markersize=10)\n",
+    "#plt.title('Error Rate vs. K Value')\n",
+    "#plt.xlabel('K')\n",
+    "#plt.ylabel('Error Rate')"
    ]
   },
   {
@@ -1411,13 +1417,13 @@
    "outputs": [],
    "source": [
     "# Créer une instance du model knn\n",
-    "knn = KNeighborsClassifier(n_neighbors = 29)\n",
+    "#knn = KNeighborsClassifier(n_neighbors = 29)\n",
     "\n",
     "# Entraîner le modèle sur les données d'entraînement encodées\n",
-    "knn.fit(X_train_encoded, y_train)\n",
+    "#knn.fit(X_train_encoded, y_train)\n",
     "\n",
-    "print(\"Training score\", knn.score(X_train_encoded, y_train))\n",
-    "print(\"Test score\", knn.score(X_test_encoded, y_test))"
+    "#print(\"Training score\", knn.score(X_train_encoded, y_train))\n",
+    "#print(\"Test score\", knn.score(X_test_encoded, y_test))"
    ]
   },
   {
@@ -1427,18 +1433,18 @@
    "outputs": [],
    "source": [
     "# Prédiction sur les données d'entraînement et de test\n",
-    "y_train_pred_knn = knn.predict(X_train_encoded)\n",
-    "y_test_pred_knn = knn.predict(X_test_encoded)\n",
+    "#y_train_pred_knn = knn.predict(X_train_encoded)\n",
+    "#y_test_pred_knn = knn.predict(X_test_encoded)\n",
     "\n",
     "# Matrice de confusion pour les données d'entraînement\n",
-    "conf_matrix_train_knn = confusion_matrix(y_train, y_train_pred_knn)\n",
-    "print(\"Matrice de confusion (Training Data):\")\n",
-    "print(conf_matrix_train_knn)\n",
+    "#conf_matrix_train_knn = confusion_matrix(y_train, y_train_pred_knn)\n",
+    "#print(\"Matrice de confusion (Training Data):\")\n",
+    "#print(conf_matrix_train_knn)\n",
     "\n",
     "# Matrice de confusion pour les données de test\n",
-    "conf_matrix_test_knn = confusion_matrix(y_test, y_test_pred_knn)\n",
-    "print(\"\\nMatrice de confusion (Test Data):\")\n",
-    "print(conf_matrix_test_knn)"
+    "#conf_matrix_test_knn = confusion_matrix(y_test, y_test_pred_knn)\n",
+    "#print(\"\\nMatrice de confusion (Test Data):\")\n",
+    "#print(conf_matrix_test_knn)"
    ]
   },
   {
@@ -1449,22 +1455,22 @@
    "source": [
     "# calcul des indicateurs de performance du modèle : \n",
     "\n",
-    "TP_knn = conf_matrix_test_knn[0, 0]\n",
-    "FP_knn = conf_matrix_test_knn[1, 0]\n",
-    "FN_knn = conf_matrix_test_knn[0, 1]\n",
-    "TN_knn = conf_matrix_test_knn[1, 1]\n",
+    "#TP_knn = conf_matrix_test_knn[0, 0]\n",
+    "#FP_knn = conf_matrix_test_knn[1, 0]\n",
+    "#FN_knn = conf_matrix_test_knn[0, 1]\n",
+    "#TN_knn = conf_matrix_test_knn[1, 1]\n",
     "\n",
-    "sensibilite_knn = round((TP_knn / (TP_knn + FN_knn)),2)*100\n",
-    "specificite_knn = round((TN_knn / (TN_knn + FP_knn)),2)*100\n",
-    "taux_erreur_alpha_knn = round((FN_knn / (TP_RF + FN_knn)),2)*100\n",
-    "taux_erreur_beta_knn = (FP_knn / (FP_knn + TN_knn))*100\n",
-    "taux_erreur_moyen_knn = round(((FP_knn + FN_knn) / (FP_knn + FN_knn + TP_knn + TN_knn)),2)*100\n",
+    "#sensibilite_knn = round((TP_knn / (TP_knn + FN_knn)),2)*100\n",
+    "#specificite_knn = round((TN_knn / (TN_knn + FP_knn)),2)*100\n",
+    "#taux_erreur_alpha_knn = round((FN_knn / (TP_RF + FN_knn)),2)*100\n",
+    "#taux_erreur_beta_knn = (FP_knn / (FP_knn + TN_knn))*100\n",
+    "#taux_erreur_moyen_knn = round(((FP_knn + FN_knn) / (FP_knn + FN_knn + TP_knn + TN_knn)),2)*100\n",
     "\n",
-    "print(\"Sensibilité:\", sensibilite_knn)\n",
-    "print(\"Spécificité:\", specificite_knn)\n",
-    "print(\"Taux d'erreur alpha:\", taux_erreur_alpha_knn)\n",
-    "print(\"Taux d'erreur beta:\", taux_erreur_beta_knn)\n",
-    "print(\"Taux d'erreur moyen:\", taux_erreur_moyen_knn)"
+    "#print(\"Sensibilité:\", sensibilite_knn)\n",
+    "#print(\"Spécificité:\", specificite_knn)\n",
+    "#print(\"Taux d'erreur alpha:\", taux_erreur_alpha_knn)\n",
+    "#print(\"Taux d'erreur beta:\", taux_erreur_beta_knn)\n",
+    "#print(\"Taux d'erreur moyen:\", taux_erreur_moyen_knn)"
    ]
   },
   {
